made a double click event

--- a/Events/index.html
+++ b/Events/index.html
@@ -29,7 +29,7 @@ The purpose of jQuery is to make it much easier to use JavaScript on your websit
     
     $(document).ready(function(){     //JQUERY ONLY WORKS ONCE ENTIRE SITE IS LOADED 
     
-        $("button").click(fn1);
+        $("button").dblclick(fn1);
 
 
 function fn1(){
