done the text and atribute method

--- a/Events/index.html
+++ b/Events/index.html
@@ -9,21 +9,18 @@
 <body>
     <button  id="btn1">Click me</button>
     <h1 id="firsth1">jQuery Events</h1>
-    
-     
 
 
-
-
-
-
-
-
-    <!-- jQuery selectors are one of the most important parts of the jQuery library.
-jQuery selectors allow you to select and manipulate HTML element(s).
-jQuery selectors are used to "find" (or select) HTML elements based on their name, id, classes, types, attributes, values of attributes and much more. It's based on the existing CSS Selectors, and in addition, it has some own custom selectors.
-All selectors in jQuery start with the dollar sign and parentheses: $().
-The purpose of jQuery is to make it much easier to use JavaScript on your website. jQuery takes a lot of common tasks that require many lines of JavaScript code to accomplish, and wraps them into methods that you can call with a single line of code. jQuery also simplifies a lot of the complicated things from JavaScript, like AJAX calls and DOM manipulation. -->
+    <!-- 
+    We have the ability to create dynamic web pages by using events. Events are actions that can be detected by your Web Application.
+    All the different visitor's actions that a web page can respond to are called events.
+    An event represents the precise moment when something happens.
+    Examples:
+    moving a mouse over an element
+    selecting a radio button
+    clicking on an element
+    The term "fires/fired" is often used with events. Example: "The keypress event is fired, the moment you press a key".
+    When these events are triggered, you can then use a custom function to do pretty much whatever you want with the event. These custom functions call Event Handlers. -->
 </body>
 <script src="js/jquery.js"></script>
 <script>
