made a dom manipulation by using removeclass method

--- a/Dom manipulation/index.html
+++ b/Dom manipulation/index.html
@@ -36,6 +36,11 @@
      $("#firstdive").addClass("newdivclass");
 
    });
+   $("#btn2").click(function(){
+
+$("#firstdive").removeClass("newdivclass");
+
+});
     });
 
    
