made the layout of page

--- a/Dom manipulation/index.html
+++ b/Dom manipulation/index.html
@@ -19,7 +19,7 @@
     
     <div id="firstdive" class="mydiv">
         <p id="p1" class="p1class" value="">Lorem ipsum dolor sit amet,<b>consectetur</b>  adipisicing elit. Iste earum sequi nulla</p>
-        <img src="img/img1.jpg" alt="">
+        <img class="img1" src="img/img1.jpg" alt="">
     </div>
     <div id="div2" class="mydiv">
         <p id="p2" class="plclass" value="hello world">Lorem ipsum dolor sit amet,<b>consectetur</b>  adipisicing elit. Iste earum sequi nulla</p>
@@ -39,7 +39,7 @@
    });
    $("#btn2").click(function(){
 
-   $("#firstdive").removeClass("newdivclass newparaclass");
+   $("#firstdive").removeClass  ("newdivclass newparaclass");
 
    });
    $("#btn3").click(function(){
@@ -51,6 +51,9 @@
     alert($("#firstdive").css("padding"));
 
     });
+    $("#btn1").click(function(){
+   
+    })
     });   
  
 
