implemented the tooltip widget

--- a/Date picker widget Jquery UI/index.html
+++ b/Date picker widget Jquery UI/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div id="mydiv">
-       <h1>JqueryUI</h1>
+       <h1>Date Picker JqueryUI</h1>
        <input id="dateinput" placeholder="put the date here" type="text">
    </div>
    
