added a bounce effect to tooltip

--- a/Tooltip widget jquery UI/index.html
+++ b/Tooltip widget jquery UI/index.html
@@ -24,6 +24,7 @@
     
    $("img").tooltip({
         content:"Coding is the best",
+        show:{effect:"bounce",duration:4000},
    });
 
 </script>
